--- a/app/src/main/res/layout/fragment_search_news.xml
+++ b/app/src/main/res/layout/fragment_search_news.xml
@@ -3,12 +3,36 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                              android:layout_height="match_parent">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textViewSearch" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:id="@+id/linearLayoutSearch"
+                  android:layout_width="match_parent"
+                  android:layout_height="50dp"
+                  android:orientation="horizontal"
+                  android:gravity="top"
+                  app:layout_constraintStart_toStartOf="parent"
+                  android:background="@color/colorPrimary" android:layout_marginTop="0dp"
+                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0">
+        <EditText
+                android:id="@+id/editTextSearch"
+                android:layout_width="390dp"
+                android:layout_height="40dp"
+                android:layout_margin="5dp"
+                android:padding="5dp"
+                android:background="@drawable/et_style"
+                android:hint="@string/search"
+                android:imeOptions="actionGo"
+                android:imeActionId="666"
+                android:imeActionLabel="Some Label"
+                android:inputType="text"
+                tools:layout_editor_absoluteY="29dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="50dp"
+            tools:layout_editor_absoluteX="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayoutSearch"/>
 </android.support.constraint.ConstraintLayout>
