--- a/app/src/main/res/layout/article_detail.xml
+++ b/app/src/main/res/layout/article_detail.xml
@@ -138,6 +138,7 @@
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
+            android:id="@+id/floating_card_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:elevation="6dp"
