--- a/app/src/main/res/layout/article_detail.xml
+++ b/app/src/main/res/layout/article_detail.xml
@@ -31,7 +31,8 @@
                     android:contentDescription="@string/app_name"
                     android:scaleType="centerCrop"
                     android:layout_width="match_parent"
-                    android:layout_height="350dp" />
+                    android:layout_height="350dp"
+                    android:src="@drawable/grey_layout"/>
 
             <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -75,7 +76,7 @@
                         android:padding="12dp"
                         android:textSize="20sp"
                         android:layout_marginTop="12dp"
-                        android:textStyle="bold"
+                        android:fontFamily="@font/newspaper_bold"
                         android:textColor="@color/textColor"
                         android:text="Recent news"
                         android:layout_width="wrap_content"
@@ -110,7 +111,7 @@
                 <TextView
                         android:id="@+id/article_detail_content"
                         android:padding="12dp"
-                        android:textSize="13sp"
+                        android:textSize="16sp"
                         android:lineSpacingMultiplier="1.5"
                         android:layout_marginTop="12dp"
                         android:layout_width="wrap_content"
@@ -125,6 +126,7 @@
                         android:textSize="13sp"
                         android:lineSpacingMultiplier="1.5"
                         android:layout_marginTop="12dp"
+                        android:textColorLink="@color/textColor"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                 />
