--- a/app/src/main/res/drawable/bottom_navigation_colors.xml
+++ b/app/src/main/res/drawable/bottom_navigation_colors.xml
@@ -1,7 +1,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
             android:state_checked="true"
-            android:color="#FFFFFF" />
+            android:color="#000" />
     <item
             android:state_checked="false"
             android:color="#D8D8D8" />
