--- a/app/src/main/res/layout/fragment_search_news.xml
+++ b/app/src/main/res/layout/fragment_search_news.xml
@@ -12,11 +12,19 @@
                   app:layout_constraintStart_toStartOf="parent"
                   android:background="@color/colorPrimary" android:layout_marginTop="0dp"
                   app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0">
+        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                            xmlns:tools="http://schemas.android.com/tools"
+                                            xmlns:app="http://schemas.android.com/apk/res-auto"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_margin="5dp"
+                                            app:cardBackgroundColor="@android:color/white"
+                                            app:cardCornerRadius="6dp"
+                                            app:cardElevation="6dp">
         <EditText
                 android:id="@+id/editTextSearch"
                 android:layout_width="390dp"
                 android:layout_height="40dp"
-                android:layout_margin="5dp"
                 android:padding="5dp"
                 android:background="@drawable/et_style"
                 android:hint="@string/search"
@@ -26,6 +34,7 @@
                 android:inputType="text"
                 tools:layout_editor_absoluteY="29dp"
                 app:layout_constraintEnd_toEndOf="parent"/>
+        </android.support.v7.widget.CardView>
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
