--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -5,7 +5,6 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_margin="5dp"
-
                                     app:cardBackgroundColor="@android:color/white"
                                     app:cardCornerRadius="2dp"
                                     app:cardElevation="2dp">
@@ -19,7 +18,8 @@
                 android:id="@+id/article_image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:scaleType="centerCrop"/>
+                android:scaleType="centerCrop"
+                android:src="@drawable/grey_layout"/>
 
         <TextView
                 android:id="@+id/article_title"
@@ -27,8 +27,8 @@
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
                 android:padding="20dp"
-                android:fontFamily="sans-serif"
-                android:textColor="#333"
+                android:fontFamily="@font/newspaper_bold"
+                android:textColor="#000"
                 android:textSize="18sp" />
     </LinearLayout>
 
