--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="textColor">#000000</color>
     <color name="grey">#EEEEEE</color>
+    <color name="icon">#334A5E</color>
 </resources>
